Handle missing values in key columns

--- a/notebooks/1_eda.ipynb
+++ b/notebooks/1_eda.ipynb
@@ -1628,6 +1628,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.fillna({\n",
+    "    \"Province\": \"Unknown\",\n",
+    "    \"Gender\": \"Unknown\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "df.dropna(subset=[\"TotalClaims\", \"TotalPremium\"], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
